--- a/.env.local
+++ b/.env.local
@@ -127,9 +127,23 @@ const useEmail = () => {
 };
 
 const usePayment = () => ({
-  createCheckoutSession: (priceId, plan) => {
-    alert(`Upgrading to ${plan} plan! In production, this would redirect to Stripe.`);
-  },
+  createCheckoutSession:async (priceId, plan) => {
+    try {
+  const response = await fetch('/api/create-checkout-session', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ priceId, plan }),
+  });
+  const session = await response.json();
+  if (session.url) {
+    window.location.href = session.url;
+  } else {
+    alert('Error creating checkout session');
+  }
+} catch (error) {
+  console.error('Error:', error);
+  alert('Error creating checkout session');
+}
   loading: false
 });
 
